Fix overflowing bug from scrolling element (projects)

--- a/styles.scss
+++ b/styles.scss
@@ -112,17 +112,73 @@ header {
 }
 
 
+.projects-title {
+  position: relative;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  top: 6em;
+  display: flex;
+  gap: 1em;
+  width: 100%;
+
+  .left-arrow,
+  .right-arrow {
+    display: grid;
+    align-items: center;
+    border-radius: 100%;
+    width: 3.5em;
+    height: 3.5em;
+    background-color: white;
+    border: none;
+
+    &:disabled {
+      background-color: rgba(255, 255, 255, 0.295);
+    }
+
+    img {
+      width: 2em;
+      height: 2em;
+    }
+  }
+
+  .left-arrow {
+    justify-self: end;
+
+    img {
+      transform: rotate(0.5turn);
+      margin-top: -0.5em;
+      margin-left: 0.4em;
+    }
+  }
+
+  .right-arrow {
+    justify-self: start;
+
+    img {
+      margin-top: 0.2em;
+      margin-left: 0.8em;
+    }
+  }
+
+}
+
+::-webkit-scrollbar {
+  width: 0;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 .projects {
   display: grid;
   grid-auto-flow: column;
   justify-items: center;
   align-items: center;
   width: 100%;
-  padding: 1em;
+  padding: 1em 2em;
   box-sizing: border-box;
   opacity: 1;
+  overflow: scroll;
   background-color: #430147;
-  opacity: 1;
   background: radial-gradient(
       circle,
       transparent 20%,
@@ -160,7 +216,6 @@ header {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
     justify-content: center;
-    overflow-x: scroll;
 
     @media only screen and (min-width: 992px) {
       width: 60vw;
@@ -168,38 +223,7 @@ header {
     }
   }
 
-  .left-arrow,
-  .right-arrow {
-    display: grid;
-    align-items: center;
-    border-radius: 100%;
-    width: 3.5em;
-    height: 3.5em;
-
-    img {
-      width: 2em;
-      height: 2em;
-    }
-  }
-
-  .left-arrow {
-    justify-self: end;
-
-    img {
-      transform: rotate(0.5turn);
-      margin-top: -0.5em;
-      margin-left: 0.4em;
-    }
-  }
-
-  .right-arrow {
-    justify-self: start;
-
-    img {
-      margin-top: 0.2em;
-      margin-left: 0.8em;
-    }
-  }
+  
 }
 
 .card {
@@ -207,12 +231,9 @@ header {
   background-color: var(--accent-purple);
   color: white;
   font-size: 0.9em;
-  min-width: 20em;
-  height: 50%;
+  min-width: 18em;
   border-radius: 15px;
   box-shadow: 2px 0px 9px -3px rgba(0, 0, 0, 0.75);
-  height: min-content;
-  min-height: 25em;
   padding: 2em 1.5em;
   -webkit-box-shadow: 2px 0px 9px -3px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 2px 0px 9px -3px rgba(0, 0, 0, 0.75);
@@ -240,6 +261,10 @@ header {
     width: 80%;
   }
 
+  .buttons-container {
+    display: flex;
+  }
+
   button {
     font-family: "LeagueSpartan";
     font-weight: bold;
@@ -263,8 +288,7 @@ header {
 }
 
 .card-transform {
-  // -webkit-transform: scale(1);
-  // -ms-transform: scale(1.3);
-  // transform: scale(1.12);
-  background-color: red;
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
 }
